# bot

./: .gitignore  CMakeLists.txt  docker-compose.yaml  notes  notes.txt  rooms.txt  socket_server.js
api_server/src/: package-lock.json  package.json  server.js
auth_service/: auth_service.js  package-lock.json  package.json
auth_service/db/: index.js  user_model.js  utils.js
config/: db.env  docker-compose.yaml  nginx.conf
env/: app.env  data.txt
include/: Shader.h  shapes.h
random/: README.md  a.out  base64.c  bits.c  has.c  pointer.c  stream.js  string.c  websocket_impl.js
room/: Dockerfile  Socket.js  a.out  bit.js  client.js  endi.c  package-lock.json  package.json  request.js  server.js  upgrade.js
room_service/: Dockerfile  docker-compose.yaml  package-lock.json  package.json  room_service.js
room_service/db/: index.js  room_model.js
server/: docker-compose.yaml
server/conf/: nginx.conf
server/src/: package-lock.json  package.json
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Dockerfile  Shader.cpp  index.js  main.cpp  package-lock.json  package.json  server.js  shapes.cpp
src/api/: gateway.js  test.txt
src/random/: Socket.js  a.out  buffer.js  internals.txt  proxy.js  server.js  stream.js
src/utils/: utils.js
src_/: Dockerfile  package-lock.json  package.json  tsconfig.json
src_/api/: gateway.ts
src_/code/: index.ts  test.ts
test/rdb/: docker-compose.yaml  (+5 more)
utils/: bit.js
websocket_s/: Dockerfile  app1.env  app2.env  docker-compose.yaml  index.js  package-lock.json  package.json  publisher.js  subscriber.js
(+31 files in other folders)
